WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38651
WebFrame::paintDocumentRectToContext paints content at the wrong location
https://bugs.webkit.org/show_bug.cgi?id=38651
Summary
WebFrame::paintDocumentRectToContext paints content at the wrong location
Steve Falkenburg
Reported
2010-05-06 09:45:20 PDT
WebFrame::paintDocumentRectToContext paints content at the wrong location
Attachments
Patch
(1.20 KB, patch)
2010-05-06 09:53 PDT
,
Steve Falkenburg
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Falkenburg
Comment 1
2010-05-06 09:53:09 PDT
Created
attachment 55252
[details]
Patch
Adam Roben (:aroben)
Comment 2
2010-05-06 10:04:24 PDT
Comment on
attachment 55252
[details]
Patch
> @@ -348,11 +348,8 @@ HRESULT STDMETHODCALLTYPE WebFrame::pain > gc.save(); > LONG width = rect.right - rect.left; > LONG height = rect.bottom - rect.top; > - FloatRect dirtyRect; > - dirtyRect.setWidth(width); > - dirtyRect.setHeight(height); > + FloatRect dirtyRect(rect.left, rect.top, width, height);
You could get rid of the width and height variables by doing: FloatRect dirtyRect(IntRect(rect)); Too bad we don't have a way to test this. r=me
Steve Falkenburg
Comment 3
2010-05-06 10:39:38 PDT
Committed
r58895
: <
http://trac.webkit.org/changeset/58895
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug