2010-05-06  Steve Falkenburg  <sfalken@apple.com>

Reviewed by Adam Roben.

        WebFrame::paintDocumentRectToContext paints content at the wrong location
        https://bugs.webkit.org/show_bug.cgi?id=38651

        * WebFrame.cpp:
        (WebFrame::paintDocumentRectToContext):


Canonical link: https://commits.webkit.org/50142@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58895 268f45cc-cd09-0410-ab3c-d52691b4dbfc